force-app/src/objects/CTCM__CashMatchSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>CTCM__AccountNumberAPI__c</fullName>
        <defaultValue>&apos;AccountNumber&apos;</defaultValue>
        <label>Account Number API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Account_Number_PIN_API__c</fullName>
        <inlineHelpText>API for the field that should replace the Account Number in the payment file from the PIN Object.</inlineHelpText>
        <label>Account Number PIN API</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__AddInstructionIdentifierID__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Some banks require a Instruction Identifier ID (InstrId). Selecting this option adds this ID to the payment file.</inlineHelpText>
        <label>Add Instruction Identifier ID</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Add_SHA256_hash_in_payment_file__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If we enable this then we will populate SHA256 hash code in the payment file else we will only send in email.</description>
        <inlineHelpText>If we enable this then we will populate SHA256 hash code in the payment file else we will only send in email.</inlineHelpText>
        <label>Add SHA256 hash in payment file</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Automatch_Without_Prefix__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If we enable this then automatch functionality will try to match SIN with references which has no prefix.</description>
        <inlineHelpText>If we enable this then automatch functionality will try to match SIN with references which has no prefix.</inlineHelpText>
        <label>Automatch Without Prefix</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__BalanceTypeforBSDate__c</fullName>
        <inlineHelpText>By default the balance date is determined by the opening Balance (OPBD). Some banks don&apos;t provide an opening balance. In that case, the closing balance of the preceding statement is used (PRCD).
Enter a value here if override, e.g. &apos;CLBD&apos;</inlineHelpText>
        <label>Balance Type for BS Date</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Bank_Account_Name_Payment_File_Header__c</fullName>
        <description>If populated then this field value from bank account should be displayed in the payment file under the name tag in the header(&lt;Dbtr&gt;&lt;Nm&gt;customvalue&lt;/Nm&gt;&lt;/Dbtr&gt;)</description>
        <inlineHelpText>If populated then this field value from bank account should be displayed in the payment file under the name tag in the header(&lt;Dbtr&gt;&lt;Nm&gt;customvalue&lt;/Nm&gt;&lt;/Dbtr&gt;)</inlineHelpText>
        <label>Bank Account Name(Payment File Header)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Batch_Exchange_Rate_Update_Email__c</fullName>
        <inlineHelpText>Populate to receive the status of batch for updating exchange rates</inlineHelpText>
        <label>Batch Exchange Rate Update Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CTCM__CustomCountryFieldforBankfile__c</fullName>
        <inlineHelpText>Enter the API name of the custom field on the Account object that indicate the Bank Account Country code.
(only used if no IBAN number is avaialble)
IMPORTANT: The country codes should be the 2 digit country code (ISO 3166-1 alpha-2-code)</inlineHelpText>
        <label>Custom Country Field for Bankfile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__DDCustomFilter__c</fullName>
        <inlineHelpText>Additional custom filter. Add a additional custom filter to filter the Direct Debid documents (billing documents or Sales Invoices). 
The filter should be related to the c2g__codaTransaction___c object. For Example: &quot;c2g__Account__r.Name!=&apos;Test&apos;&quot;</inlineHelpText>
        <label>DD - Custom Filter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__DDDefaultshowdocumentswithMandate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DD - Default show documents with Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__DDFilterPaymentMethodValue__c</fullName>
        <defaultValue>&apos;Electronic&apos;</defaultValue>
        <inlineHelpText>Enter the value for the Payment Method to filter the Direct Debit Billing Documents and/or Sales Invoices. 
Default value = &apos;Electronic&apos;
Leave blank if no filter is required.</inlineHelpText>
        <label>DD - Filter Payment Method Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__DD_Custom_Sales_InvoiceNumber_API_name__c</fullName>
        <label>DD - Custom Sales InvoiceNumber API name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Direct_Debit_Description_Prefix__c</fullName>
        <defaultValue>&quot;Invoice: &quot;</defaultValue>
        <inlineHelpText>Enter the prefix to use in the Direct Debit description. This text will proceed the Sales Invoice Number. The default text is &quot;Invoice&quot;</inlineHelpText>
        <label>Direct Debit Description Prefix</label>
        <length>26</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Disable_Partial_Posting_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If we enable this then while uploading statements from MT940 or CAMT53 buttons will results not to post partially</description>
        <inlineHelpText>If we enable this then while uploading statements from MT940 or CAMT53 buttons will results not to post partially and by default it is true</inlineHelpText>
        <label>Disable Partial Posting Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__DocumentNumberPrefix__c</fullName>
        <defaultValue>&apos;Invoice Number: &apos;</defaultValue>
        <inlineHelpText>Prefix for the Vendor Document Number to be used in the unstructured message in the bank payment file. 
Default value is &apos;Invoice Number:&apos;</inlineHelpText>
        <label>Document Number Prefix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__DocumentReferencePrefix__c</fullName>
        <defaultValue>&apos;Reference: &apos;</defaultValue>
        <inlineHelpText>Prefix for the Reference 1 to be used in the unstructured message in the bank payment file. 
Default value is &apos;Reference:&apos;</inlineHelpText>
        <label>Document Reference Prefix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__EnforceBSLStatusValidation__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enforce Banks Statement Line Status Validation</inlineHelpText>
        <label>EnforceBSLStatusValidation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Exchange_Rate_App_Source__c</fullName>
        <defaultValue>&apos;LiveRates&apos;</defaultValue>
        <inlineHelpText>values should be one of the below 

CEB 
LiveRates 
CurrencyLayer
Estv Daily rates
Estv Monthly rates</inlineHelpText>
        <label>Exchange Rate App Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__IBAN_Number_PIN_API__c</fullName>
        <inlineHelpText>API for the field that should replace the IBAN in the payment file from the PIN Object.</inlineHelpText>
        <label>IBAN Number PIN API</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Invoice_Prefixes_for_Matching__c</fullName>
        <description>Please use format like SIN#6 for SIN000001and to add multiple use comma separated like SIN#6,SINUMBER#8</description>
        <inlineHelpText>Please use format like SIN#6 for SIN000001 and to add multiple use comma separated like SIN#6,SINUMBER#8</inlineHelpText>
        <label>Invoice Prefixes for Matching</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Journal_threshold__c</fullName>
        <label>Journal threshold(Deprecated)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CTCM__MatchAccounts_BasedOn_SalesInvoiceNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MatchAccounts BasedOn SalesInvoiceNumber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Number_of_Statements_Per_Page__c</fullName>
        <description>We have added this to reduce the number of Statement Lines to display in Cash Match page in case of View state errors</description>
        <inlineHelpText>We have added this to reduce the number of Statement Lines to display in Cash Match page in case of View state errors</inlineHelpText>
        <label>Number of Statements Per Page</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCM__Payment_Document_Number_Prefex__c</fullName>
        <description>Prefix for the Reference to be used in the unstructured message in the bank payment file.
Default value is &apos;Document Number:&apos; for Payments</description>
        <inlineHelpText>Prefix for the Reference to be used in the unstructured message in the bank payment file.
Default value is &apos;Document Number:&apos; for Payments</inlineHelpText>
        <label>Payment Document Number Prefix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Prefix_File_Name_Pain_001__c</fullName>
        <label>Prefix File Name Pain.001</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Prefix_File_Name_Pain_008__c</fullName>
        <label>Prefix File Name Pain.008</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Removedecimalsforthesecurrencies__c</fullName>
        <defaultValue>&apos;BIF,DJF,GNF,ISK,JPY,KRW,RWF,UGX,VND,VUV,XAF,XOF,XPF&apos;</defaultValue>
        <inlineHelpText>Add currencies, divided by a comma, for which the decimals should be removed. 
The default value is:
BIF,DJF,GNF,ISK,JPY,KRW,RWF,UGX,VND,VUV,XAF,XOF,XPF</inlineHelpText>
        <label>Remove decimals for these currencies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__RuleID__c</fullName>
        <label>(DEPRICATED) RuleID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__SWIFT_BIC_Code_PIN_API__c</fullName>
        <inlineHelpText>API for the field that should replace the SWIFT code in the payment file from the PIN Object.</inlineHelpText>
        <label>SWIFT/BIC Code PIN API</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__ShowPostAllButton__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Beta feature. Enables the Post All button.</inlineHelpText>
        <label>Show Post All Button (Bèta)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__StructuredReferenceFieldonPIN__c</fullName>
        <inlineHelpText>The API name of the field containing the structured reference field on the Payable Invoice.</inlineHelpText>
        <label>Structured Reference Field on PIN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__StructuredReferenceFieldonSIN__c</fullName>
        <defaultValue>&apos;CTCM__StructuredReference__c&apos;</defaultValue>
        <inlineHelpText>The API name of the field where the structured Reference is stored on the Sales Invoice Object. 
The default value is &apos;CTCM__StructuredReference__c&apos;</inlineHelpText>
        <label>Structured Reference Field on SIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__Update_Charge_Bearer_in_All_Accounts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Charge Bearer in All Accounts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__UseAccountCurrencyforCashMatching__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>The default Currency mode for the Cash Matching is &quot;Document&quot; mode. Check this box to use the Account currency mode instead.</inlineHelpText>
        <label>Use Account Currency for Cash Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__UseReference1intheReference__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this to use the Reference 1 in the Bank Payment Reference Field for unstructured references.</inlineHelpText>
        <label>Use Reference 1  in the Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__UseVendorDocumentintheReference__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Check this to use the Vendor Document Number in the Bank Payment Reference Field for unstructured references.</inlineHelpText>
        <label>Use Vendor Document # in the Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Use_2_decimals_for_Salesforce_Currencies__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use 2 decimals for Salesforce Currencies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Use_Account_Name_in_XML_Files_DD_Pmnt__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If we enable this checkbox we use &quot;Account Name&quot; from the bank account should be displayed in Direct Debit/Payment XML files instead of the accounting company name.</description>
        <inlineHelpText>If we enable this checkbox we use &quot;Account Name&quot; from the bank account should be displayed in Direct Debit/Payment XML files instead of the accounting company name.</inlineHelpText>
        <label>Use Account Name in XML Files(DD)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Use_Batch_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to use Batch Booking in Payment Files.</inlineHelpText>
        <label>Use Batch Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Use_DD_Batch_Booking__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to activate batch booking in Direct Debit Bank Files.</inlineHelpText>
        <label>Use DD Batch Booking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__Vendor_Account_Name_Payment_File_Lines__c</fullName>
        <description>If populated then this field value from account should be displayed in the payment file under the name tag in the lines(&lt;Cdtr&gt;&lt;Nm&gt;customvalue&lt;/Nm&gt;&lt;/Cdtr&gt;)</description>
        <inlineHelpText>If populated then this field value from account should be displayed in the payment file under the name tag in the lines(&lt;Cdtr&gt;&lt;Nm&gt;customvalue&lt;/Nm&gt;&lt;/Cdtr&gt;)</inlineHelpText>
        <label>Vendor Account Name(Payment File Lines)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__XE_endpoint__c</fullName>
        <inlineHelpText>Endpoint for XE as source for Exchange rate app(https://www.xe.com/)</inlineHelpText>
        <label>XE endpoint</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__XE_password__c</fullName>
        <inlineHelpText>XE exchange rate source password</inlineHelpText>
        <label>XE password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__XE_username__c</fullName>
        <inlineHelpText>XE exchange rate source username</inlineHelpText>
        <label>XE username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__customSinNumberField__c</fullName>
        <label>Custom Sales Invoice Number API name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__enable_split_payment__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>To enable split of payments based on G account values at vendor account level</inlineHelpText>
        <label>enable split payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__hideshowOnlyMandatesoption__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Hide the &quot;Only invoices with Mandates on Invoice&quot; option on the Direct Debit Batch creation page.</inlineHelpText>
        <label>DD - hide show Only Mandates option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__paymentFileLibraryID__c</fullName>
        <inlineHelpText>The ID of the library where the payment file will be stored.</inlineHelpText>
        <label>Payment File Library ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__sepaCurrencies__c</fullName>
        <defaultValue>&quot;EUR,CHF,GBP,DKK,GIP,HUF,ISK,HRK,NOK,PLN,RON,CZK,GPB,SEK&quot;</defaultValue>
        <label>SEPA Currencies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__sinNumberLength__c</fullName>
        <inlineHelpText>The lenth of the numeric part of the Sales Invoice Number</inlineHelpText>
        <label>Sales Invoice Number Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CTCM__sinNumberPrefix__c</fullName>
        <label>Sales Invoice Number Prefix</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTCM__storeAsSecureFile__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to store the SEPA payment as a secure file in Salesforce.
IMPORTANT: Populate the Payment File Library ID to set the location of the file.</inlineHelpText>
        <label>Store As Secure File</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTCM__use_new_DirectDebit_Function__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use new DirectDebit Function</label>
        <type>Checkbox</type>
    </fields>
    <label>Cash Match Settings</label>
</CustomObject>